--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --disableHostCheck=true",
     "lint": "vue-cli-service lint",
     "dev": "nodemon --exec vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.5",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.2"
