--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 node_modules
 /dist
 
-
-# local env files
+# Local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -22,5 +22,5 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-# load-balancer
+# aws load-balancer
 load-balancer.txt
